tried adjusting margins on book-image and changing overflow to hidden, but still not fixed entirely

--- a/client/src/components/Results/style.css
+++ b/client/src/components/Results/style.css
@@ -8,9 +8,10 @@
 
 .book-image {
     float: left;
-    margin: 2%;
+    margin-bottom: 10%;
     max-height: 100%;
     max-width: 100%;
+    overflow: hidden;
 }
 
 .book-buttons {
